# universityProjects

./: .gitignore  README.md
RProjects/: .RData  .Rhistory  14Dic.R  14Sept.R  21sept.R  26oct.R  28sept.R  InferenciaMEI.txt  SergioTobal_examenMayo2017.R  datos  datos.txt  diceware.txt  entregable1.R  entregable1.odt  examen2017.R  feedback.csv  fotocasa.txt  horasCafeJubilado.csv  muellePeso.csv  practicaInferencia.R
SAR/: CMakeLists.txt
SAR/AndroidApp/app/: build.gradle  proguard-rules.pro
SAR/concurrent server echo TCP/: echo_ser_tcp_conc.c
SAR/concurrent server echo UDP/: echo_cli_udp_conc.c  echo_ser_udp_conc.c
SAR/improved client echo UDP/: echo_cli_udp_mej.c
SAR/multicast/: multicast_recep.c
SAR/pract2.1-2.2/TCP/: a.out  echo_ser_tcp.cpp
SAR/pract2.1-2.2/UDP/: echo_ser_udp.c
SAR/pract2.1/TCP/: echo_cli_tcp.cpp
SAR/pract2.1/UDP/: echo_cli_udp.c
SAR/proyecto/: cliente.c
SAR/sockets/pract2.1-2.2/TCP/: echo_cli_tcp.cpp
SAR/sockets/proyecto/: Documentacion de practica 2.odt  cliente.h  fich  servidor.c
SAR/webs/practica 1/: index.html  second.html
SAR/webs/practica 1/css/: file.css
SAR/webs/practica 1/javascript/: script.js
SAR/webs/web/: comparator.php  comparator1.php  composer.json  footer.php  header.php  humans.txt  index.php  lista_comentarios.php  post_comments.php  select.php
SAR/webs/web/css/: main.css
SAR/webs/web/data/: comentarios.xml
SAR/webs/web/js/: comparator.js  notes.js
java/estrucDatos/arboles/: BinSearchTree.java  BinaryTreeNode.java
java/estrucDatos/examen1EDA/robot/: Camino.java  CircularLinkedList.java  Node.java  NodeCircularLinkedList.java
java/estrucDatos/examen2012/ejer1/: ListaPalabras.java
java/estrucDatos/examen2012/ejer2/: Candidatura.java  Eleccion.java
java/estrucDatos/examen2012/ejer3/: GrafoLaberinto.java  GraphAL.java
java/estrucDatos/examen2012/ejer4/: ArbolMedicinas.java
java/estrucDatos/examen2013/: Notas.txt
java/estrucDatos/examen2013/ejer3/: GrafoCallejero.java
java/estrucDatos/examen2014/: Notas.txt
java/estrucDatos/examen2014/ejer1/: SimpleLinkedList.java
java/estrucDatos/examen2014/ejer3/: GrafoHollyWood.java
java/estrucDatos/examen2015/ejer1/: Matriz.java  Node.java
java/estrucDatos/examen2015/ejer2/: JuegoColores.java  Tirada.java
java/estrucDatos/examen2015/ejer3/: Terremoto.java
java/estrucDatos/examen2015/ejer4/: ArbolDeJuego.java  Info.java  Nodo.java
java/estrucDatos/examen2EDA/actorMasTaquillero/: Actor.java  Actores.java  Ganancia.java  Pelikula.java
java/estrucDatos/examen2EDA/cartasSolitario/: Baraja.java  Bicola.java  Carta.java  Jugada.java  Jugador.java
java/estrucDatos/examen2EDA/colegasDeActor/: Actor.java  ListaActores.java  NewList.java  Pelicula.java
java/estrucDatos/examen2EDA/colegio/: Colegio.java
java/estrucDatos/examen2EDA/juegoBloque/: Bloque.java  Juego.java
java/estrucDatos/examen3EDA/: GrafoClase.java  HashTema.java
java/estrucDatos/examen3EDA/Biblioteca/: BibliotecaHash.java  BibliotecaListaEnlazada.java
java/estrucDatos/examen3EDA/asignaturas/: ArbolAsignaturas.java  Asignatura.java  BinarySearchTree.java  BinaryTreeNode.java  ListaAlumnos.java
java/estrucDatos/examen3EDA/campeonatoFutbol/: Campeonato.java  Marcador.java  Nodo.java
java/estrucDatos/examen3EDA/evaluador/: Instruccion.java  ListaVariables.java
java/estrucDatos/examen3EDA/herencia/: GrafoPersonas.java  GraphAL.java
java/estrucDatos/examen3EDA/redSocial/: RedSocial.java  iRedSocial.java
java/estrucDatos/radixSort/: RadixSort1.java  Stopwatch.java  radixSort.java
java/estrucDatos/zzRepetidos/AlumnosMejorNota/: ArbolAsignaturas.java  Asignatura.java  BinarySearchTree.java  BinaryTreeNode.java  ListaAlumnos.java
java/estrucDatos/zzRepetidos/Herencia/: GrafoPersonas.java  Persona.java
java/ingSoftware/: abstractml.java
java/ingSoftware/pruebaAutoevaluacion/: Alumno.java  Entregable.java
java/redesSockets/: Cliente.java  ClienteLimpio.java  Servidor.java  ServidorLimpio.java
openGL/: CMakeLists.txt
openGL/exercise1/: HOWTO_runFromConsole.txt  triangleRasterization.cpp
openGL/exercise2/: definitions.h  display.c  io.c  io.h  load_obj_joseba.c  main.c  stack2.c  stack2.h  test
openGL/exercise3/: TODO  definitions.h  display.c  display.h  io.c  io.h  load_obj_joseba.c  main.c  stack2.h
openGL/exercise4/: TODO  definitions.h  display.c  display.h  io.c  io.h  load_obj_joseba.c  main.c  stack2.c
src/estrucDatos/arboles/: BinSearchTree.java  BinaryTreeNode.java
src/estrucDatos/examen2013/: Notas.txt
src/estrucDatos/examen2014/: Notas.txt
src/estrucDatos/examen3EDA/: GrafoClase.java  HashTema.java
src/estrucDatos/radixSort/: RadixSort1.java  Stopwatch.java  radixSort.java
src/ingSoftware/: abstractml.java
src/ingSoftware/pruebaAutoevaluacion/: Alumno.java  Entregable.java
src/redesSockets/: Cliente.java  ClienteLimpio.java  Servidor.java  ServidorLimpio.java
vevProject/: .gitattributes  .gitignore  CMakeLists.txt  INSTALL  Makefile  keys.txt  mg.h
vevProject/Camera/: avatar.cc  camera.cc  camera.h
vevProject/Geometry/: gObject.cc  gObject.h  gObjectManager.cc  triangleMesh.cc  triangleMesh.h  triangleMeshGL.cc
vevProject/Math/: Makefile  bbox.cc  bbox.h  bboxGL.cc  bboxGL.h  intersect.cc  intersect.h  line.cc  plane.cc  segment.cc  segment.h  test.cc  trfm3D.cc  trfm3D.h  vector3.cc  vector3.h
vevProject/Misc/: glm.c  glm.h  parse_scene.cc  tools.cc  tools.h
vevProject/Scene/: node.cc  node.h  renderState.cc  renderState.h
vevProject/Shaders/: ProjectiveTexture.cc  ProjectiveTexture.h  bump_shader.frag  bump_shader.vert  dummy.vert  perfragment.frag  perfragment.vert  pervertex.frag  pervertex.vert  shader.cc  shader.h  shaderManager.cc  shaderManager.h  shaderUtils.cc  shaderUtils.h  sky.frag  sky.vert
vevProject/Shading/: image.cc  image.h  light.cc  light.h  lightManager.cc  lightManager.h  material.cc  material.h  materialManager.cc  materialManager.h  texture.cc  texture.h
vevProject/libjpeg6b-6b/: config.status  jpegtran.1  patch-stamp
vevProject/onlyShader/: Makefile  drawCube.cc  shaderUtils.cc
(+261 files in other folders)
